<resources>
    <string name="app_name" translatable="false">Aao TB Mitao</string>
    <string name="version">2.4.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="default_email" translatable="false">user.email@domain.com</string>
    <string name="forms">Forms</string>
    <string name="reports">Reports</string>
    <string name="history">History</string>
    <string name="labs">Labs</string>
    <string name="search">Search</string>
    <string name="views">Views</string>
    <string name="medication">Medication</string>
    <string name="id">"ID: "</string>
    <string name="change">(change)</string>
    <string name="program">"Program: "</string>
    <string name="forms_main_menu">Forms Main Menu</string>
    <string-array name="dummy_items">
        <item></item>
        <item>Item One</item>
        <item>Item Two</item>
        <item>Item Three</item>
    </string-array>
    <string-array name="dummy_items_2">
        <item>Item One</item>
        <item>Item Two</item>
        <item>Item Three</item>
    </string-array>
    <string-array name="dose_unit">
        <item>Gram</item>
        <item>Milligram</item>
    </string-array>
    <string-array name="duration_unit">
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
    <string name="incomplete">Incomplete</string>
    <string name="complete">Complete</string>
    <string name="key_test_type">test_type</string>
    <string name="incomplete_tests_tag">INCOMPLETE TESTS</string>
    <string name="complete_tests_tag">COMPLETE TESTS</string>
    <string name="summary">Summary</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_multiple">Add Multiple</string>
    <string name="addResult">Add Result</string>
    <string name="attachment">Attachment</string>
    <string name="attach_file">Attach File</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="title">Title</string>
    <string name="title_right">Title Right</string>
    <string name="close">Close</string>
    <string name="test_name">Test Name</string>
    <string name="instructions">Instructions</string>
    <string name="add_test">Add Test</string>
    <string name="encounter">Encounter</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="cc">CC</string>
    <string name="pmdt">PMDT</string>
    <string name="pet">PET</string>
    <string name="fast">FAST</string>
    <string name="comorbidities">Comorbidities</string>
    <string name="childhood_tb">Childhood TB</string>
    <string name="ztts">ZTTS</string>
    <string name="selected_patient_changed">Selected Patient changed to</string>
    <string name="selected_location_changed">Selected Location changed to</string>
    <string-array name="programs">
        
        <item>@string/pet</item>
        <item>@string/fast</item>
        <item>@string/comorbidities</item>
        <item>@string/childhood_tb</item>
        <item>@string/ztts</item>
    </string-array>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="power_safe_theme">Power Safe theme</string>
    <string-array name="themes">
        <item>@string/dark_theme</item>
        <item>@string/light_theme</item>
        <item>@string/power_safe_theme</item>
    </string-array>
    <string name="english">English</string>
    <string name="urdu">Urdu (اردو)</string>
    <string name="roman_english">Roman English</string>
    <string-array name="languages">
        <item>@string/english</item>
        <item>@string/urdu</item>
        <item>@string/roman_english</item>
    </string-array>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string-array name="operation_modes">
        <item>@string/online</item>
        <item>@string/offline</item>
    </string-array>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="rest">REST</string>
    <string-array name="ssl_encryption">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string name="title_offline_forms">Offline Forms</string>
    <string name="title_search_patient">Search Patient</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_location">Location Setup</string>
    <string name="support_contact_default" translatable="false">+000000000000</string>
    <string name="support_email_default" translatable="false">developer.gfatm@gmail.com</string>
    <string name="city_default" translatable="false">Karachi</string>
    <string name="province_default" translatable="false">Sindh</string>
    <string name="country_default" translatable="false">Pakistan</string>
    <string name="ip_default" translatable="false">mrs.ghd.ihn.org.pk</string>
    <string name="port_default" translatable="false">443</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="goto_first">&lt;&lt;</string>
    <string name="goto_last">>></string>
    <string name="goto_next">Next</string>
    <string name="title_sync_metadata">Sync Metadata </string>
    <string name="encrypt_db">Encrypt Database backup</string>
    <string name="expiry_period">Expiry Period (Days):</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="time_period">Time: </string>
    <string name="day">Day: </string>
</resources>