<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/dark_theme"
        android:key="theme"
        android:persistent="true"
        android:title="Theme" />

    <EditTextPreference
        android:defaultValue="@string/english"
        android:key="language"
        android:persistent="true"
        android:title="Language" />

    <EditTextPreference
        android:defaultValue="@string/online"
        android:key="mode"
        android:persistent="true"
        android:title="Mode" />

    <EditTextPreference
        android:defaultValue="@string/support_contact_default"
        android:key="support_contact"
        android:persistent="true"
        android:title="Support Contact" />

    <EditTextPreference
        android:defaultValue="@string/support_email_default"
        android:key="support_email"
        android:persistent="true"
        android:title="Support Email" />

    <EditTextPreference
        android:defaultValue="@string/province_default"
        android:key="province"
        android:title="Province" />

    <EditTextPreference
        android:defaultValue="@string/city_default"
        android:key="city"
        android:title="City" />

    <EditTextPreference
        android:defaultValue="@string/country_default"
        android:key="country"
        android:title="country" />

    <EditTextPreference
        android:defaultValue="@string/ip_default"
        android:key="ip"
        android:title="IP" />

    <EditTextPreference
        android:defaultValue="@string/port_default"
        android:key="port"
        android:title="Port" />

    <EditTextPreference
        android:defaultValue="@string/disabled"
        android:key="ssl"
        android:title="SSL Encryption" />

    <EditTextPreference
        android:defaultValue="@string/rest"
        android:key="communication_mode"
        android:title="Communication Mode" />

</PreferenceScreen>