<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/offline_forms"
        android:orderInCategory="100"
        android:title="@string/title_offline_forms"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/title_search_patient"
        app:showAsAction="never" />

    <item
        android:id="@+id/location_setup"
        android:orderInCategory="100"
        android:title="@string/title_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/sync_metadata"
        android:orderInCategory="100"
        android:title="@string/title_sync_metadata"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/title_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/online_form"
        android:orderInCategory="100"
        android:title="Saved Forms"
        app:showAsAction="never"
        android:visible="false"/>

</menu>
