<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scrollView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/small">

            <RadioGroup
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily" />

                <RadioButton
                    android:id="@+id/weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekly"/>

                <RadioButton
                    android:id="@+id/monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly" />

            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_period"/>

                <Spinner
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/time_array"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/week_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/small"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"/>

                <Spinner
                    android:id="@+id/week_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/weeks_period"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/month_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/small"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"/>

                <Spinner
                    android:id="@+id/monthly_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/month_period"/>

            </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/encrypt_db_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encrypt_db"
                android:checked="true"/>

            <LinearLayout
                android:id="@+id/credentials_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/medium">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890._-@"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLength="35" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLength="35" />
                </android.support.design.widget.TextInputLayout>

             </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/expiry_period"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/expiry_period"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890"/>

           </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/scrollView"
        android:gravity="right">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/xlarge"
            android:padding="@dimen/large"
            android:textColor="?colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/backupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="@dimen/xlarge"
            android:padding="@dimen/large"
            android:textColor="?colorAccent"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>